--- a/godot/i18n/translation.csv
+++ b/godot/i18n/translation.csv
@@ -1,5 +1,5 @@
 keys,en,de
-credits,Credits here,Credits hier
+credits,"By Golahirom, Savalige and SpaceyLake",Credits hier
 new_game,New Game,Neues Spiel
 continue,Continue,Fortfahren
 settings,Game Settings,Einstellungen
